# quickprint

./: LICENSE  README.md  pyproject.toml
quickprint/: main.py
